less/footer.less
footer .foot{
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: flex-end;
    width: 95%;
    margin: 0 2%;
    padding-top: 5%;
    padding-bottom: 4%;
    // padding: 10%;
    @media @mobile {
        display: none;
    }

    a {
        justify-content: flex-start;
        color: black;
        text-decoration: none;
    }
    // p {
        // text-align: center;
        // display: flex;
        // justify-content: center;
        // font-family: SF Pro Text;
        // font-style: normal;
        // font-weight: normal;
        // font-size: 12px;
        // line-height: 14px;

        // color: #000000;
    // }
    // .img-links {
    //     align-items: right;
        // display: flex;
        // justify-content: flex-end;
    //     .insta {
    //         position: absolute;
    //         width: 20px;
    //         height: 20.03px;
    //         left: 1316px;
    //         top: 849px;
    //     }
    //     .fb {
    //         position: absolute;
    //         left: 94.17%;
    //         right: 4.44%;
    //         top: 94.33%;
    //         bottom: 3.44%;

    //         background: #4260B5;
    //     }
    //     .twitter {
    //         position: absolute;
    //         left: 96.94%;
    //         right: 1.67%;
    //         top: 94.33%;
    //         bottom: 3.44%;

    //         background: #009DF6;
    //     }
    // }
}

